test/compile_fail/retired_decl_fails.zig
const shift = @import("shift");

comptime {
    _ = shift.Decl;
}
